--- a/Titanic_Wrangling.ipynb
+++ b/Titanic_Wrangling.ipynb
@@ -12,14 +12,45 @@
       ]
     },
     {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "---\n",
+        "title: Titanic Wrangling\n",
+        "author: Owen Barberie\n",
+        "format: \n",
+        "    html:\n",
+        "        toc: false\n",
+        "        code-fold: true\n",
+        "        embed-resources: true\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Part 1"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
@@ -366,6 +397,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Part 2"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 47,
       "metadata": {
@@ -569,6 +607,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Part 3"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 51,
       "metadata": {
@@ -609,6 +654,13 @@
       ],
       "source": [
         "pd.crosstab(df_titanic1[\"embarked\"], df_titanic1[\"class\"], normalize = 'index').plot(kind = 'bar')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Visualization can be easier for a non data expert to understand and interpret. Sometimes, creating visualizations creates the potential for errors with colors, sizing, scale, etc. "
       ]
     }
   ],
